# NoiseCutMix

./: .gitignore  LICENSE  README.md  augmentation.py  example.py  generation.py  main.py  noise_cutmix.py  pipeline.py  pyproject.toml  utils.py
config/: aircraft.json  cub.json  flower.json
